--- a/src/app/pages/admin/gestion-programas/lista-programas/lista-programas.component.html
+++ b/src/app/pages/admin/gestion-programas/lista-programas/lista-programas.component.html
@@ -1,16 +1,16 @@
 <div class="container-admin">
   <div class="header-section">
     <h2>
-      <mat-icon>admin_panel_settings</mat-icon>
-      Gestión de Roles
+      <mat-icon>assignment</mat-icon>
+      Gestión de Programas Académicos
     </h2>
     
     <div class="actions">
-      <button mat-raised-button color="primary" (click)="crearRol()">
+      <button mat-raised-button color="primary" (click)="crearPrograma()">
         <mat-icon>add</mat-icon>
-        Nuevo Rol
+        Nuevo Programa
       </button>
-      <button mat-raised-button (click)="cargarRoles()" [disabled]="loading">
+      <button mat-raised-button (click)="cargarProgramas()" [disabled]="loading">
         <mat-icon>refresh</mat-icon>
         Recargar
       </button>
@@ -24,7 +24,7 @@
         matInput 
         [(ngModel)]="searchTerm"
         (keyup.enter)="buscarPorNombre()"
-        placeholder="Ej: Administrador"
+        placeholder="Ej: Ingeniería de Sistemas"
       >
       <mat-icon matPrefix>search</mat-icon>
       <button mat-icon-button matSuffix *ngIf="searchTerm" (click)="limpiarBusqueda()">
@@ -37,38 +37,44 @@
   </div>
 
   <div class="table-container" *ngIf="!loading">
-    <table mat-table [dataSource]="roles" class="mat-elevation-z2">
+    <table mat-table [dataSource]="programas" class="mat-elevation-z2">
       <!-- ID Column -->
-      <ng-container matColumnDef="id_rol">
+      <ng-container matColumnDef="id_programa">
         <th mat-header-cell *matHeaderCellDef>ID</th>
-        <td mat-cell *matCellDef="let rol">{{ rol.id_rol }}</td>
+        <td mat-cell *matCellDef="let programa">{{ programa.id_programa }}</td>
+      </ng-container>
+
+      <!-- Código Column -->
+      <ng-container matColumnDef="codigo">
+        <th mat-header-cell *matHeaderCellDef>Código</th>
+        <td mat-cell *matCellDef="let programa">
+          <strong>{{ programa.codigo }}</strong>
+        </td>
       </ng-container>
 
       <!-- Nombre Column -->
-      <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef>Nombre del Rol</th>
-        <td mat-cell *matCellDef="let rol">
-          <strong>{{ rol.nombre }}</strong>
-        </td>
+      <ng-container matColumnDef="nombre_programa">
+        <th mat-header-cell *matHeaderCellDef>Nombre del Programa</th>
+        <td mat-cell *matCellDef="let programa">{{ programa.nombre_programa }}</td>
       </ng-container>
 
       <!-- Acciones Column -->
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef class="actions-column">Acciones</th>
-        <td mat-cell *matCellDef="let rol" class="actions-column">
+        <td mat-cell *matCellDef="let programa" class="actions-column">
           <button 
             mat-icon-button 
             color="primary"
-            (click)="editarRol(rol)"
-            matTooltip="Editar rol"
+            (click)="editarPrograma(programa)"
+            matTooltip="Editar programa"
           >
             <mat-icon>edit</mat-icon>
           </button>
           <button 
             mat-icon-button 
             color="warn"
-            (click)="eliminarRol(rol)"
-            matTooltip="Eliminar rol"
+            (click)="eliminarPrograma(programa)"
+            matTooltip="Eliminar programa"
           >
             <mat-icon>delete</mat-icon>
           </button>
@@ -83,10 +89,10 @@
         <td class="mat-cell no-data" [attr.colspan]="displayedColumns.length">
           <div class="empty-state">
             <mat-icon>inbox</mat-icon>
-            <p>No se encontraron roles</p>
-            <button mat-raised-button color="primary" (click)="crearRol()">
+            <p>No se encontraron programas académicos</p>
+            <button mat-raised-button color="primary" (click)="crearPrograma()">
               <mat-icon>add</mat-icon>
-              Agregar Primer Rol
+              Agregar Primer Programa
             </button>
           </div>
         </td>
@@ -96,6 +102,7 @@
 
   <div class="loading-container" *ngIf="loading">
     <mat-spinner></mat-spinner>
-    <p>Cargando roles...</p>
+    <p>Cargando programas...</p>
   </div>
 </div>
+
