--- a/src/app/pages/admin/gestion-docentes/lista-docentes/lista-docentes.component.html
+++ b/src/app/pages/admin/gestion-docentes/lista-docentes/lista-docentes.component.html
@@ -63,7 +63,7 @@
         <th mat-header-cell *matHeaderCellDef class="actions-column">Acciones</th>
         <td mat-cell *matCellDef="let docente" class="actions-column">
           <button 
-            mat-icon-button 
+            mat-mini-fab 
             color="primary"
             (click)="editarDocente(docente)"
             matTooltip="Editar docente"
@@ -71,8 +71,8 @@
             <mat-icon>edit</mat-icon>
           </button>
           <button 
-            mat-icon-button 
-            color="warn"
+            mat-mini-fab 
+            color="primary"
             (click)="eliminarDocente(docente)"
             matTooltip="Eliminar docente"
           >
