--- a/src/app/pages/admin/gestion-programas/lista-programas/lista-programas.component.html
+++ b/src/app/pages/admin/gestion-programas/lista-programas/lista-programas.component.html
@@ -63,7 +63,7 @@
         <th mat-header-cell *matHeaderCellDef class="actions-column">Acciones</th>
         <td mat-cell *matCellDef="let programa" class="actions-column">
           <button 
-            mat-icon-button 
+            mat-mini-fab 
             color="primary"
             (click)="editarPrograma(programa)"
             matTooltip="Editar programa"
@@ -71,8 +71,8 @@
             <mat-icon>edit</mat-icon>
           </button>
           <button 
-            mat-icon-button 
-            color="warn"
+            mat-mini-fab 
+            color="primary"
             (click)="eliminarPrograma(programa)"
             matTooltip="Eliminar programa"
           >
