--- a/src/app/pages/admin/manage-roles/manage-roles.component.html
+++ b/src/app/pages/admin/manage-roles/manage-roles.component.html
@@ -57,7 +57,7 @@
         <th mat-header-cell *matHeaderCellDef class="actions-column">Acciones</th>
         <td mat-cell *matCellDef="let rol" class="actions-column">
           <button 
-            mat-icon-button 
+            mat-mini-fab 
             color="primary"
             (click)="editarRol(rol)"
             matTooltip="Editar rol"
@@ -65,8 +65,8 @@
             <mat-icon>edit</mat-icon>
           </button>
           <button 
-            mat-icon-button 
-            color="warn"
+            mat-mini-fab 
+            color="primary"
             (click)="eliminarRol(rol)"
             matTooltip="Eliminar rol"
           >
