--- a/src/app/pages/admin/manage-users/manage-users.component.html
+++ b/src/app/pages/admin/manage-users/manage-users.component.html
@@ -18,22 +18,25 @@
   </div>
 
   <div class="search-section">
-    <mat-form-field appearance="outline" class="search-field">
-      <mat-label>Buscar usuario</mat-label>
-      <input 
-        matInput 
-        [(ngModel)]="searchTerm"
-        (keyup.enter)="buscar()"
-        placeholder="Nombre o correo"
-      >
-      <mat-icon matPrefix>search</mat-icon>
-      <button mat-icon-button matSuffix *ngIf="searchTerm" (click)="limpiarBusqueda()">
-        <mat-icon>close</mat-icon>
+    <div class="search-bar">
+      <mat-form-field appearance="outline">
+        <mat-label>Buscar usuario</mat-label>
+        <input 
+          matInput 
+          [(ngModel)]="searchTerm"
+          (keyup.enter)="buscar()"
+          placeholder="Nombre o correo"
+        >
+        <mat-icon matPrefix>search</mat-icon>
+        <button mat-icon-button matSuffix *ngIf="searchTerm" (click)="limpiarBusqueda()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="buscar()" [disabled]="loading || !searchTerm">
+        <mat-icon>search</mat-icon>
+        Buscar
       </button>
-    </mat-form-field>
-    <button mat-raised-button color="accent" (click)="buscar()" [disabled]="loading || !searchTerm">
-      Buscar
-    </button>
+    </div>
   </div>
 
   <div class="table-container" *ngIf="!loading">
@@ -62,8 +65,8 @@
       <ng-container matColumnDef="rol">
         <th mat-header-cell *matHeaderCellDef>Rol</th>
         <td mat-cell *matCellDef="let usuario">
-          <mat-chip [color]="getRolChipColor(usuario.rol?.nombre)">
-            {{ usuario.rol?.nombre || 'Sin rol' }}
+          <mat-chip>
+            {{ usuario.rol?.nombre || usuario.objRol?.nombre || 'Sin rol' }}
           </mat-chip>
         </td>
       </ng-container>
@@ -72,7 +75,7 @@
       <ng-container matColumnDef="estado">
         <th mat-header-cell *matHeaderCellDef>Estado</th>
         <td mat-cell *matCellDef="let usuario">
-          <mat-chip [color]="usuario.estado_usuario ? 'primary' : ''">
+          <mat-chip [ngClass]="usuario.estado_usuario ? 'estado-activo' : 'estado-inactivo'">
             {{ usuario.estado_usuario ? 'Activo' : 'Inactivo' }}
           </mat-chip>
         </td>
@@ -83,7 +86,7 @@
         <th mat-header-cell *matHeaderCellDef class="actions-column">Acciones</th>
         <td mat-cell *matCellDef="let usuario" class="actions-column">
           <button 
-            mat-icon-button 
+            mat-mini-fab 
             color="primary"
             [routerLink]="['/admin/manage-users/editar', usuario.id_usuario]"
             matTooltip="Editar usuario"
@@ -91,16 +94,16 @@
             <mat-icon>edit</mat-icon>
           </button>
           <button 
-            mat-icon-button 
-            [color]="usuario.estado_usuario ? 'warn' : 'primary'"
+            mat-mini-fab 
+            color="primary"
             (click)="cambiarEstado(usuario)"
             [matTooltip]="usuario.estado_usuario ? 'Deshabilitar' : 'Habilitar'"
           >
             <mat-icon>{{ usuario.estado_usuario ? 'block' : 'check_circle' }}</mat-icon>
           </button>
           <button 
-            mat-icon-button 
-            color="warn"
+            mat-mini-fab 
+            color="primary"
             (click)="eliminarUsuario(usuario)"
             matTooltip="Eliminar usuario"
           >
